--- a/recruitment.html
+++ b/recruitment.html
@@ -284,67 +284,126 @@
                         <h1>Thông Tin Tuyển Dụng</h1>
                     </div>
                     <div class="list-question">
-                                        <div class="accordion" id="accordionExample">
-                                            <div class="question-item">
-                                                <div class="question-item-header" id="headingOne">
-                                                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
-                                                            aria-expanded="true" aria-controls="collapseOne">
-                                                            Lorem Ipsum is simply dummy text of the printing and typesetting industry Ipsum has been the industry's standard
-                                                        </button>
-                                                </div>
-                                    
-                                                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-                                                    <div class="question-item-body">
-                                                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-                                                        wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum
-                                                        eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
-                                                        assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt
-                                                        sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                                                        farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
-                                                        labore sustainable VHS.
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="question-item">
-                                                <div class="question-item-header" id="headingTwo">
-                                                        <div  data-toggle="collapse"
-                                                            data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                                            <p>                                            Has survived not only five centuries, but also the leap into electronic typesetting essentially unchanged. </p>
-                                                </div>
-                                                </div>
-                                                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                                                    <div class="question-item-body">
-                                                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-                                                        wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum
-                                                        eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
-                                                        assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt
-                                                        sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                                                        farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
-                                                        labore sustainable VHS.
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="question-item">
-                                                <div class="question-item-header" id="headingThree">
-                                                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                                                            data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                                            Collapsible Group Item #3
-                                                        </button>
-                                                </div>
-                                                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                                                    <div class="question-item-body">
-                                                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-                                                        wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum
-                                                        eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
-                                                        assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt
-                                                        sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                                                        farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
-                                                        labore sustainable VHS.
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
+                        <div class="accordion" id="accordionListQuestion">
+                            <!-- question-1 -->
+                            <div class="question-item">
+                                <div class="question-item-header" id="headingOne">
+                                    <div class="question-title" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                        <h3> Lorem Ipsum is simply dummy text of the printing and typesetting industry Ipsum has been the
+                                            industry's standard</h3>
                                     </div>
+                                </div>
+                    
+                                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
+                                    data-parent="#accordionListQuestion">
+                                    <div class="question-item-body">
+                                        <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                                            the
+                                            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                                            type
+                                            and scrambled it to make a type specimen book. It has survived not only five centuries, but also
+                                            the
+                                            leap into electronic typesetting</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- question-2 -->
+                            <div class="question-item">
+                                <div class="question-item-header" id="headingTwo">
+                                    <div class="question-title" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false"
+                                        aria-controls="collapseTwo">
+                                        <h3>Has survived not only five centuries, but also the leap into electronic typesetting essentially
+                                            unchanged.</h3>
+                                    </div>
+                                </div>
+                                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionListQuestion">
+                                    <div class="question-item-body">
+                                        <p> Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
+                                            3
+                                            wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt
+                                            laborum
+                                            eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee
+                                            nulla
+                                            assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
+                                            nesciunt
+                                            sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
+                                            farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
+                                            labore sustainable VHS.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- question-3 -->
+                            <div class="question-item">
+                                <div class="question-item-header" id="headingThree">
+                                    <div class="question-title" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false"
+                                        aria-controls="collapseThree">
+                                        <h3>When an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                                        </h3>
+                                    </div>
+                                </div>
+                                <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
+                                    data-parent="#accordionListQuestion">
+                                    <div class="question-item-body">
+                                        <p> Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
+                                            3
+                                            wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt
+                                            laborum
+                                            eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee
+                                            nulla
+                                            assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
+                                            nesciunt
+                                            sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
+                                            farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
+                                            labore sustainable VHS.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- question-4 -->
+                            <div class="question-item">
+                                <div class="question-item-header" id="headingThree">
+                                    <div class="question-title" data-toggle="collapse" data-target="#collapse-4" aria-expanded="false" aria-controls="collapse-4">
+                                        <h3>Survived not only five centuries, but also the leap into electronic typesetting, remaining
+                                            essentially unchanged.</h3>
+                                    </div>
+                                </div>
+                                <div id="collapse-4" class="collapse" aria-labelledby="headingThree" data-parent="#accordionListQuestion">
+                                    <div class="question-item-body">
+                                        <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                                            the
+                                            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                                            type
+                                            and scrambled it to make a type specimen book. It has survived not only five centuries, but also
+                                            the
+                                            leap into electronic typesetting</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- question-5 -->
+                            <div class="question-item">
+                                <div class="question-item-header" id="headingThree">
+                                    <div class="question-title" data-toggle="collapse" data-target="#collapse-5" aria-expanded="false" aria-controls="collapse-5">
+                                        <h3>With the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
+                                            desktop</h3>
+                                    </div>
+                                </div>
+                                <div id="collapse-5" class="collapse" aria-labelledby="headingThree" data-parent="#accordionListQuestion">
+                                    <div class="question-item-body">
+                                        <p> Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
+                                            3
+                                            wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt
+                                            laborum
+                                            eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee
+                                            nulla
+                                            assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
+                                            nesciunt
+                                            sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
+                                            farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
+                                            labore sustainable VHS</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </section>
 
             </section>
@@ -458,9 +517,7 @@
     <script src="js/jquery.mmenu.all.js"></script>
     <script src="js/swiper.min.js"></script>
     <script src="js/carousel.js"></script>
-    <script src="js/main.js"></script>
     <!-- end import file js -->
-
 
     <!-- script plugins fb -->
     <div id="fb-root"></div>
