--- a/recruitment.html
+++ b/recruitment.html
@@ -284,7 +284,7 @@
                         <h1>Thông Tin Tuyển Dụng</h1>
                     </div>
                     <div class="list-question">
-                        <div class="accordion" id="accordionListQuestion">
+                        <div class="accordion" id="accordionListParam">
                             <!-- question-1 -->
                             <div class="question-item">
                                 <div class="question-item-header" id="headingOne">
