--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <ul class="nav nav-main-menu">
                             <!-- li sản phẩm -->
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a class="nav-link">
                                     <div class="nav-img">
                                         <img src="images/icon/sp.png" alt="">
                                     </div>
@@ -45,7 +45,7 @@
                                 <div class="has-child-menu">
                                     <ul class="nav nav-has-child-menu">
                                         <li class="nav-item-child">
-                                            <a href="#" class="nav-link-child">
+                                            <a href="product-category.html" class="nav-link-child">
                                                 <div class="nav-child-img">
                                                     <img src="images/categories/menu/canter.png" alt="">
                                                 </div>
@@ -53,7 +53,7 @@
                                             </a>
                                         </li>
                                         <li class="nav-item-child">
-                                            <a href="#" class="nav-link-child">
+                                            <a href="product-category.html" class="nav-link-child">
                                                 <div class="nav-child-img">
                                                     <img src="images/categories/menu/fuso_fa.png" alt="">
                                                 </div>
@@ -61,7 +61,7 @@
                                             </a>
                                         </li>
                                         <li class="nav-item-child">
-                                            <a href="#" class="nav-link-child">
+                                            <a href="product-category.html" class="nav-link-child">
                                                 <div class="nav-child-img">
                                                     <img src="images/categories/menu/fuso_fj.png" alt="">
                                                 </div>
@@ -69,7 +69,7 @@
                                             </a>
                                         </li>
                                         <li class="nav-item-child">
-                                            <a href="#" class="nav-link-child">
+                                            <a href="product-category.html" class="nav-link-child">
                                                 <div class="nav-child-img">
                                                     <img src="images/categories/menu/fuso_fz.png" alt="">
                                                 </div>
@@ -77,7 +77,7 @@
                                             </a>
                                         </li>
                                         <li class="nav-item-child">
-                                            <a href="#" class="nav-link-child">
+                                            <a href="product-category.html" class="nav-link-child">
                                                 <div class="nav-child-img">
                                                     <img src="images/categories/menu/fuso_rosa.png" alt="">
                                                 </div>
@@ -90,7 +90,7 @@
                             </li>
                             <!-- li dịch vụ -->
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a class="nav-link">
                                     <div class="nav-img">
                                         <img src="images/icon/dv.png" alt="">
                                     </div>
@@ -100,7 +100,7 @@
                                 <div class="has-child-menu">
                                     <ul class="nav nav-has-child-menu">
                                         <li class="nav-item-child">
-                                            <a href="#" class="nav-link-child">
+                                            <a href="service_vs1.html" class="nav-link-child">
                                                 <div class="nav-child-img">
                                                     <!-- <img src="images/categories/menu/canter.png" alt=""> -->
                                                 </div>
@@ -108,7 +108,7 @@
                                             </a>
                                         </li>
                                         <li class="nav-item-child">
-                                            <a href="#" class="nav-link-child">
+                                            <a href="service_vs2.html" class="nav-link-child">
                                                 <div class="nav-child-img">
                                                     <!-- <img src="images/categories/menu/fuso_fa.png" alt=""> -->
                                                 </div>
@@ -116,7 +116,7 @@
                                             </a>
                                         </li>
                                         <li class="nav-item-child">
-                                            <a href="#" class="nav-link-child">
+                                            <a href="service_vs2.html" class="nav-link-child">
                                                 <div class="nav-child-img">
                                                     <!-- <img src="images/categories/menu/fuso_fj.png" alt=""> -->
                                                 </div>
@@ -124,7 +124,7 @@
                                             </a>
                                         </li>
                                         <li class="nav-item-child">
-                                            <a href="#" class="nav-link-child">
+                                            <a href="service_vs2.html" class="nav-link-child">
                                                 <div class="nav-child-img">
                                                     <!-- <img src="images/categories/menu/fuso_fz.png" alt=""> -->
                                                 </div>
@@ -132,7 +132,7 @@
                                             </a>
                                         </li>
                                         <li class="nav-item-child">
-                                            <a href="#" class="nav-link-child">
+                                            <a href="service_vs2.html" class="nav-link-child">
                                                 <div class="nav-child-img">
                                                     <!-- <img src="images/categories/menu/fuso_fz.png" alt=""> -->
                                                 </div>
@@ -140,7 +140,7 @@
                                             </a>
                                         </li>
                                         <li class="nav-item-child">
-                                            <a href="#" class="nav-link-child">
+                                            <a href="service_vs2.html" class="nav-link-child">
                                                 <div class="nav-child-img">
                                                     <!-- <img src="images/categories/menu/fuso_fz.png" alt=""> -->
                                                 </div>
@@ -152,7 +152,7 @@
                             </li>
                             <!-- li phụ tùng -->
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a class="nav-link">
                                     <div class="nav-img">
                                         <img src="images/icon/pt.png" alt="">
                                     </div>
@@ -161,7 +161,7 @@
                                 <div class="has-child-menu">
                                     <ul class="nav nav-has-child-menu">
                                         <li class="nav-item-child">
-                                            <a href="#" class="nav-link-child">
+                                            <a href="accessary.html" class="nav-link-child">
                                                 <div class="nav-child-img">
                                                     <img src="images/categories/menu/canter.png" alt="">
                                                 </div>
@@ -169,7 +169,7 @@
                                             </a>
                                         </li>
                                         <li class="nav-item-child">
-                                            <a href="#" class="nav-link-child">
+                                            <a href="accessary.html" class="nav-link-child">
                                                 <div class="nav-child-img">
                                                     <img src="images/categories/menu/fuso_fa.png" alt="">
                                                 </div>
@@ -177,7 +177,7 @@
                                             </a>
                                         </li>
                                         <li class="nav-item-child">
-                                            <a href="#" class="nav-link-child">
+                                            <a href="accessary.html" class="nav-link-child">
                                                 <div class="nav-child-img">
                                                     <img src="images/categories/menu/fuso_fj.png" alt="">
                                                 </div>
@@ -185,7 +185,7 @@
                                             </a>
                                         </li>
                                         <li class="nav-item-child">
-                                            <a href="#" class="nav-link-child">
+                                            <a href="accessary.html" class="nav-link-child">
                                                 <div class="nav-child-img">
                                                     <img src="images/categories/menu/fuso_fz.png" alt="">
                                                 </div>
@@ -206,7 +206,7 @@
                             </li>
                             <!-- li hỗ trợ -->
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a class="nav-link">
                                     <div class="nav-img">
                                         <img src="images/icon/ht.png" alt="">
                                     </div>
@@ -215,7 +215,7 @@
                                 <div class="has-child-menu">
                                     <ul class="nav nav-has-child-menu">
                                         <li class="nav-item-child">
-                                            <a href="#" class="nav-link-child">
+                                            <a href="support-details.html" class="nav-link-child">
                                                 <div class="nav-child-img">
                                                     <!-- <img src="images/categories/menu/fuso_fz.png" alt=""> -->
                                                 </div>
@@ -223,7 +223,7 @@
                                             </a>
                                         </li>
                                         <li class="nav-item-child">
-                                            <a href="#" class="nav-link-child">
+                                            <a href="support-details.html" class="nav-link-child">
                                                 <div class="nav-child-img">
                                                     <!-- <img src="images/categories/menu/fuso_fz.png" alt=""> -->
                                                 </div>
@@ -569,19 +569,19 @@
                     <div class="menu-footer">
                         <ul class="nav nav-menu-footer">
                             <li class="nav-item">
-                                <a href="#" class="nav-link">giới thiệu</a>
+                                <a href="abouts.html" class="nav-link">giới thiệu</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">tin tức</a>
+                                <a href="blogs.html" class="nav-link">tin tức</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">liên hệ</a>
+                                <a href="contact.html" class="nav-link">liên hệ</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">tuyển dụng</a>
+                                <a href="recruitment.html" class="nav-link">tuyển dụng</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">tới trang</a>
+                                <a href="index.html" class="nav-link">tới trang</a>
                             </li>
                         </ul>
                     </div>
@@ -637,16 +637,19 @@
                 <li>
                     <a href="#">
                         <img src="images/icon/phone.png" alt="">
+                        <p>kinh doanh:<span>0933 800 567</span></p>
                     </a>
                 </li>
                 <li>
                     <a href="#">
                         <img src="images/icon/phone.png" alt="">
+                        <p>kinh doanh:<span>0933 800 567</span></p>
                     </a>
                 </li>
                 <li>
                     <a href="#">
                         <img src="images/icon/loca.png" alt="">
+                        <p>Số 10 đường 3 ,HCM</p>
                     </a>
                 </li>
             </ul>
@@ -656,7 +659,21 @@
         <div class="scroll-top">
             <span><i class="fas fa-chevron-up"></i></span>
         </div>
+
+        <!-- hot-ads -->
+        <div class="hot-ads">
+            <div class="hot-img">
+                <a href="#"><img src="images/banner/slide-1.jpg" alt="" title=""></a>
+                <div class="btn-close" title="Close"></div>
+            </div>
+        </div>
+
+        <!-- preloader -->
+        <div class="holder">
+            <div class="preloader"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+          </div>
     </div>
+
 
 
     <!-- import file js -->
@@ -669,7 +686,6 @@
     <script src="js/carousel.js"></script>
     <script src="js/main.js"></script>
     <!-- end import file js -->
-
 
     <!-- script plugins fb -->
     <div id="fb-root"></div>
