--- a/abouts.html
+++ b/abouts.html
@@ -425,19 +425,19 @@
                 <section class="menu-maps">
                     <ul class="nav nav-menu-maps">
                         <li clas="nav-item">
-                            <a href="#" class="nav-link active">Lịch sử thương hiệu</a>
+                            <a href="#timeline" class="nav-link">Lịch sử thương hiệu</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Giá trị</a>
+                            <a href="#content-value" class="nav-link">Giá trị</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Cộng đồng</a>
+                            <a href="#community" class="nav-link">Cộng đồng</a>
                         </li>
                     </ul>
                 </section>
 
                 <!-- timeline -->
-                <section class="timeline">
+                <section class="timeline" id="timeline">
                     <div id="timeline">
                         <ul id="dates">
                             <li><a href="#1900">1947</a></li>
@@ -562,15 +562,19 @@
                     </div>
                 </section>
 
-                <section class="content-value">
+                <!-- contet-value -->
+                <section class="content-value" id="content-value">
                     <div class="summary">
-                        <div>
+                        <div class="img">
                             <img src="images/abouts/Layer 771.png" alt="">
                         </div>
-                        <p><strong>Xe tải Nhật Bản là sự lựa chọn hàng đầu của mọi khách hàng bởi giá trị bền vững mà nó
+                        <div class="text">
+                            <h3>Xe tải Nhật Bản là sự lựa chọn hàng đầu của mọi khách hàng bởi giá trị bền vững mà nó
                                 mang lại như chất lượng tin cậy, tiết kiệm, dịch vụ hậu mãi hấp dẫn… Sử dụng sản phẩm
                                 bền bỉ, tiết kiệm nhiên liệu là điều quan trọng tạo nên sự thành công trong công việc
-                                kinh doanh.</strong></p>
+                                kinh doanh.</h3>
+                        </div>
+                       
                     </div>
                     <div class="body">
                         <h3>Lịch sử phát triển thương hiệu FUSO</h3>
@@ -604,7 +608,9 @@
                             đẳng cấp cho người sở hữu.</p>
                     </div>
                 </section>
-                <section class="community">
+
+                <!-- community -->
+                <section class="community" id="community">
                     <div class="text">
                         <p>FUSO không những mang đến những sản phẩm chất lượng cao cho khách hàng Việt Nam mà còn quan
                             tâm đến việc phát triển cộng đồng. Hằng năm, FUSO luôn tham gia vào các hoạt động giúp đỡ
@@ -612,8 +618,8 @@
                     </div>
                     <div class="images">
                         <div class="images-container">
+                            <a href="#" data><img src="images/abouts/02-THACO-FUSO_GIOI-THIEU_09.jpg" alt=""></a>
                             <a href="#"><img src="images/abouts/02-THACO-FUSO_GIOI-THIEU_06.jpg" alt=""></a>
-                            <a href="#"><img src="images/abouts/02-THACO-FUSO_GIOI-THIEU_09.jpg" alt=""></a>
                             <a href="#"><img src="images/abouts/02-THACO-FUSO_GIOI-THIEU_14.jpg" alt=""></a>
                             <a href="#"><img src="images/abouts/02-THACO-FUSO_GIOI-THIEU_16.jpg" alt=""></a>
                         </div>
