--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
         <!-- hot-ads -->
         <div class="hot-ads">
             <div class="hot-img">
-                <a href="#"><img src="images/banner/slide-1.jpg" alt="" title=""></a>
+                <a href="google.com.vn" target="_blank"><img src="images/banner/slide-1.jpg" alt="" title=""></a>
                 <div class="btn-close" title="Close"></div>
             </div>
         </div>
