--- a/vs2/contact.html
+++ b/vs2/contact.html
@@ -593,7 +593,7 @@
                                                 và dịch vụ của chúng tôi. Để tiếp tục, bạn phải đọc Chính sách bảo mật.</p>
                                         </div>
                                         <div class="security-checkbox">
-                                            <input type="checkbox">
+                                            <input type="checkbox" id="checkbox">
                                             <p>Tôi đã đọc và hiểu Chính sách bảo mật.</p>
                                         </div>
                                         <div class="security-danger">
