--- a/vs2/product-details_vs2.html
+++ b/vs2/product-details_vs2.html
@@ -1489,7 +1489,8 @@
 
 
             </section>
-            <section class="related-news dp">
+
+            <section class="related-news">
                 <div class="title text-left">
                     <h3>tin hoạt động và khuyến mãi</h3>
                 </div>
